jenkinsdemo/jenkins_demo_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkinsdemo
  labels:
    name: jenkinsdemo
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
    protocol: TCP
  selector:
    name: jenkinsdemo
