jenkinsdemo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkinsdemo
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: jenkinsdemo
              servicePort: 8080
      host: jenkinsdemo.nickdevops.com
